--- a/src/main/resources/templates/member/cart.html
+++ b/src/main/resources/templates/member/cart.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <!--<div th:replace="~{fragments/common/header :: headerFragment}"></div>-->
-<h1 class="title"><span th:text="${member.memberName}" ></span>님 장바구니</h1>
+<h1 class="title"><span th:text="${member.memberNickName}" ></span>님 장바구니</h1>
 <h1 class="title1"><span th:text="${member.memberId}">회원번호</span></h1>
 <div class="table-responsive">
     <table class="table table-striped table-sm">
@@ -15,6 +15,7 @@
         <tr>
             <th scope="col">번호</th>
             <th scope="col">상품ID</th>
+            <th scope="col">상품이미지</th>
             <th scope="col">상품명</th>
             <th scope="col">수량</th>
             <th scope="col">가격</th>
@@ -26,6 +27,14 @@
         <tr th:each="cartItem, i: ${cartItems}">
             <td th:text="${i.count}">1</td>
             <td th:text="${cartItem.getProduct().getId()}">3번상품</td>
+            <td>
+                <th:block th:each="img : ${productImages}">
+                    <!-- 상품 ID에 해당하는 이미지만 출력 -->
+                    <th:block th:if="${cartItem.getProduct().getId()} == ${img.id}">
+                        <img th:src="@{/images/{filename}(filename=${img.productImgSavedName})}" alt="" height="50"/>
+                    </th:block>
+                </th:block>
+            </td>
             <td th:text="${cartItem.getProduct().getProductName()}">상품명</td>
             <td th:text="${cartItem.getCartItemCount()}">수량</td>
             <td th:text="${cartItem.getProduct().getProductPrice() * cartItem.getCartItemCount()}">가격</td>
