--- a/src/main/resources/templates/semiMember/cart.html
+++ b/src/main/resources/templates/semiMember/cart.html
@@ -14,6 +14,7 @@
         <tr>
             <th scope="col">번호</th>
             <th scope="col">상품ID</th>
+            <th scope="col">상품이미지</th>
             <th scope="col">상품명</th>
             <th scope="col">수량</th>
             <th scope="col">가격</th>
@@ -25,6 +26,14 @@
         <tr th:each="cartItem, i: ${cartItems}">
             <td th:text="${i.count}">1</td>
             <td th:text="${cartItem.getProduct().getId()}">3번상품</td>
+            <td>
+                <th:block th:each="img : ${productImages}">
+                    <!-- 상품 ID에 해당하는 이미지만 출력 -->
+                    <th:block th:if="${cartItem.getProduct().getId()} == ${img.id}">
+                        <img th:src="@{/images/{filename}(filename=${img.productImgSavedName})}" alt="" height="50"/>
+                    </th:block>
+                </th:block>
+            </td>
             <td th:text="${cartItem.getProduct().getProductName()}">상품명</td>
             <td th:text="${cartItem.getCartItemCount()}">수량</td>
             <td th:text="${cartItem.getProduct().getProductPrice() * cartItem.getCartItemCount()}">가격</td>
