--- a/src/main/resources/templates/fragments/common/header.html
+++ b/src/main/resources/templates/fragments/common/header.html
@@ -86,9 +86,9 @@
                     <!--                    조회순으로-->
                     <li><a href="#top10">Top 10</a></li>
                     <!--                    랜덤하게-->
-                    <li><a th:href="@{/}">상의</a></li>
-                    <li><a th:href="@{/}">하의</a></li>
-                    <li><a th:href="@{/}">악세사리</a></li>
+                    <li><a th:href="@{/}">상의1</a></li>
+                    <li><a th:href="@{/}">하의1</a></li>
+                    <li><a th:href="@{/}">악세사리1</a></li>
                     <li></li>
                 </ul>
             </div>
